--- a/index.html
+++ b/index.html
@@ -3,83 +3,176 @@
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+<link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+<link rel="stylesheet" href="stylesheets/github-dark.css">
+<!-- Custom Tweaks -->
+<link rel="stylesheet" href="stylesheets/os2dev.timemachine.css">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>OS2Bootstrap</title>
-  <meta name="description" content="Bootstrapping OS/2">
+<title>OS2Bootstrap</title>
+<meta name="description" content="Bootstrapping OS/2">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 
 </head>
 
 <body>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">OS2Bootstrap</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Bootstrapping OS/2</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/os2dev/os2bootstrap/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/os2dev/os2bootstrap/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/os2dev/os2bootstrap" class="code">View OS2Bootstrap on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<div class="wrapper">
+<header>
+<h1 class="title">OS2Bootstrap</h1>
+</header>
+<div id="container">
+<p class="tagline">Bootstrapping OS/2</p>
+<p>
+<a style="color:#e0e080;" href="https://github.com/os2dev/os2bootstrap" class="code.no">View sources on GitHub</a><br>
+<!--a style="color:#e0e080;" href="https://github.com/rdpe/ohm/issues" class="code.no">View issues on GitHub</a--><br>
+</p>
+<div id="main" role="main">
+<div class="download-bar">
+<div class="inner">
+<a href="https://github.com/os2dev/os2bootstrap/tarball/master" class="download-button tar"><span>Download</span></a>
+<a href="https://github.com/os2dev/os2bootstrap/zipball/master" class="download-button zip"><span>Download</span></a>
+</div>
+<span class="blc"></span><span class="trc"></span>
+</div>
+<!--article class="markdown-body"-->
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p style="position:absolute; margin-top:-16em; margin-left:-0.9em;">
+<a href="http://os2dev.github.io" class="avatar">
+<img src="https://avatars1.githubusercontent.com/u/20545777?v=3&s=460" width="24">
+</a>
+</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<!-- Image based on http://mattshwery.com/img/commit.png -->
+<table class="commits">
+<tr>
+<td class="commits">
+<a href="https://github.com/os2dev/os2bootstrap/commits/master">
+<span class="commits">
+<img class="commits" src="images/commit-24.png"><br>
+master
+</span>
+</a>
+</td>
+<td class="commits-hidden">
+<a href="https://github.com/os2dev/os2bootstrap/commits/features">
+<span class="commits">
+<img class="commits" src="images/commit-24.png"><br>
+features
+</span>
+</a>
+</td>
+<td class="commits-hidden">
+<a href="https://github.com/os2dev/os2bootstrap/commits/fixes">
+<span class="commits">
+<img class="commits" src="images/commit-24.png"><br>
+fixes
+</span>
+</a>
+</td>
+<td class="commits-hidden">
+<a href="https://github.com/os2dev/os2bootstrap/commits/gh-pages">
+<span class="commits">
+<img class="commits" src="images/commit-24.png"><br>
+gh-pages
+</span>
+</a>
+</td>
+</tr>
+</table>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h3>Welcome</h3>
+<p>
+This is the<br>
+<span style="font-weight:bold;">OS/2 Bootstrap Project</</span><br>
+</p>
+<p></p>
+<p>
+Its purpose is to investigate booting OS/2 on modern systems.<br>
+With UEFI and GPT becoming more and more common, new ways need to be<br>
+found to enable booting OS/2 on such systems.<br>
+</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h3>Why this project ?</h3>
+<p>
+Modern hardware is changing in ways that require adjustments to booting OS/2.<br>
+</p>
+<p>
+One important change is the <a href="http://en.wikipedia.org/wiki/BIOS">BIOS</a> being replaced by
+<a href="http://en.wikipedia.org/wiki/Unified_Extensible_Firmware_Interface">UEFI</a>,<br>
+while another important change is the <a href="http://en.wikipedia.org/wiki/Master_boot_record">MBR partitioning scheme</a><br>
+being replaced by the <a href="http://en.wikipedia.org/wiki/GUID_Partition_Table">GPT partitioning scheme</a>.<br>
+</p>
+<p>
+Related issues of the above are<br>
+<a href="http://en.wikipedia.org/wiki/Cylinder-head-sector">CHS</a> aligned partitions
+versus <a href="http://en.wikipedia.org/wiki/Partition_alignment">MiB aligned partitions</a><br>
+and <a href="http://en.wikipedia.org/wiki/Advanced_Format">Advanced Format</a> Disks.<br>
+</p>
+<p>
+<span style="font-weight:bold;">OS2Bootstrap has its focus on addressing the above issues</span><br>
+<!--span style="font-size:0.9em;">(in a complementary manner)</span><br-->
+</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3>Links to Related Information</h3>
+<p>
+<a href="http://www.thomas-krenn.com/en/wiki/Partition_Alignment">http://www.thomas-krenn.com/en/wiki/Partition_Alignment</a><br>
+<a href="http://www.rodsbooks.com/gdisk/hybrid.html">http://www.rodsbooks.com/gdisk/hybrid.html</a><br>
+<a href="http://en.wikipedia.org/wiki/GUID_Partition_Table#PROTECTIVE-MBR">http://en.wikipedia.org/wiki/GUID_Partition_Table#PROTECTIVE-MBR</a><br>
+<a href="http://i.dell.com/sites/doccontent/shared-content/data-sheets/en/Documents/512e_4Kn_Disk_Formats_120413.pdf">http://i.dell.com/sites/doccontent/shared-content/data-sheets/en/Documents/512e_4Kn_Disk_Formats_120413.pdf</a><br>
+</p>
+<p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h3>About AirBoot</h3>
+<p>
+Currently, <a href="http://rousseaux.github.io/netlabs.air-boot">AirBoot</a> is the (optional) BootManager for OS/2.<br>
+However, AirBoot is a track0 loader, meaning it depends on MBR partitioning.<br>
+Furthermore, the track0 space is limited (~32kB), hampering extension<br>
+of AirBoot with new features or capabilities.<br>
+</p>
+<p>
+<span style="font-weight:bold;">OS2Bootstrap also aims to find direction for AirBoot</span><br>
+<!--span style="font-size:0.9em;">(in a complementary manner)</span><br-->
+</p>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h3>Developer Notes</h3>
+<p>
+In no way this project has the intention to replace<br>
+or otherwise interfere with exsiting developments in this realm.<br>
+It is meant to be of a <b>complementary</b> nature.<br>
+</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h3>What, you didn't know OS/2 is still g(r)o(w)ing strong ?</h3>
+<p>
+<br>
+<a href="https://www.arcanoae.com"><span style="font-weight:bold;font-size:1.2em;font-style:italic;"><img src="images/ArcaNoaeLGO.png" width="200"><br>OS/2 Generation Next</span></a><br>
+</p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/os2dev" class="avatar"><img src="https://avatars1.githubusercontent.com/u/20545777?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/os2dev">os2dev</a> maintains <a href="https://github.com/os2dev/os2bootstrap">OS2Bootstrap</a></p>
+<!--/article-->
+</div>
+</div>
+<footer>
+<div class="owner">
+<p><a href="https://github.com/os2dev" class="avatar"><img src="https://avatars1.githubusercontent.com/u/20545777?v=3&amp;s=60" width="48" height="48"></a> <a style="color:#e0e080;" href="http://os2dev.github.io">os2dev</a><span style="color:white; font-family:inherit; font-size:1.2em; font-style:italic;"> maintains </span><a style="color:#e0e080;" href="https://github.com/os2dev/os2bootstrap">os2bootstrap</a></p>
 
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/os2dev/os2bootstrap/tarball/master" class="tar">tar</a><a href="https://github.com/os2dev/os2bootstrap/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+</div>
+<div class="creds">
+<small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+</div>
+</footer>
+</div>
+<div class="current-section">
+<a href="#top">Scroll to top</a>
+<a href="https://github.com/os2dev/os2bootstrap/tarball/master" class="tar">tar</a><a href="https://github.com/os2dev/os2bootstrap/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+<p class="name"></p>
+</div>
 
-  
+
 </body>
 </html>
